adding what is needed to get site running correctly

--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,10 @@
 {
   "development": {
-    "username": "matters",
+    "username": "Jay",
     "password": null,
     "database": "laughFactory",
     "host": "127.0.0.1",
-    "dialect": "postgre"
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
