--- a/package.json
+++ b/package.json
@@ -20,10 +20,21 @@
   },
   "homepage": "https://github.com/hubbertj/laughing-matters-corporation#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "connect-pg-simple": "^3.1.2",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "express-authorization": "^1.0.0",
     "express-ejs-layouts": "^2.2.0",
+    "express-session": "^1.14.2",
+    "grunt": "^1.0.1",
     "mix-into": "^0.4.0",
-    "sequelize": "^3.26.0"
+    "moment": "^2.16.0",
+    "parse-database-url": "^0.3.0",
+    "pg": "^6.1.0",
+    "sequelize": "^3.26.0",
+    "winston": "^2.3.0",
+    "winston-postgresql": "^1.2.0"
   }
 }
