--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "parse-database-url": "^0.3.0",
     "pg": "^6.1.0",
     "sequelize": "^3.26.0",
+    "uuid": "^3.0.0",
     "winston": "^2.3.0",
     "winston-postgresql": "^1.2.0"
   }
