adding more to the site

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/hubbertj/laughing-matters-corporation#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
     "connect-pg-simple": "^3.1.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
