adding the css to the project

--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "connect-pg-simple": "^3.1.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
+    "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-authorization": "^1.0.0",
     "express-ejs-layouts": "^2.2.0",
     "express-session": "^1.14.2",
     "grunt": "^1.0.1",
+    "grunt-contrib-less": "^1.4.0",
+    "grunt-contrib-watch": "^1.0.0",
     "mix-into": "^0.4.0",
     "moment": "^2.16.0",
     "parse-database-url": "^0.3.0",
