adding build to project

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/hubbertj/laughing-matters-corporation#readme",
   "dependencies": {
+    "angular": "^1.5.8",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "connect-pg-simple": "^3.1.2",
@@ -31,10 +32,17 @@
     "express-ejs-layouts": "^2.2.0",
     "express-session": "^1.14.2",
     "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-less": "^1.4.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-ng-annotate": "^3.0.0",
+    "jquery": "^3.1.1",
     "mix-into": "^0.4.0",
     "moment": "^2.16.0",
+    "offcanvas-bootstrap": "^2.2.0",
     "parse-database-url": "^0.3.0",
     "pg": "^6.1.0",
     "sequelize": "^3.26.0",
